task5/tests/group/tests/output/t2.out
lli: lli: tests/group/tests/output/t2.ll:27:15: error: use of undefined value '%-21899'
%t3 = zext i8 %-21899 to i32
              ^

